--- a/whisper_sample.ipynb
+++ b/whisper_sample.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMU1MlGau0nQyCcxTNDowzU",
+      "authorship_tag": "ABX9TyMms805Gej1oQKa0CdFSCEl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cuiIyU3r_dgk",
-        "outputId": "4b38bbc5-641b-4c7b-d473-e58062bd23cd"
+        "outputId": "b9041b7c-a0ff-41f6-edee-e345773fdcab"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,14 +90,14 @@
       "metadata": {
         "id": "_dtD5mzm_jMJ"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Define the YouTube video URL\n",
-        "video_url = \"https://www.youtube.com/watch?v=SX4Z6bd3T1Q\"\n",
+        "video_url = \"https://youtu.be/aygSMgK3BEM\"\n",
         "\n",
         "# Specify the output path for the downloaded video\n",
         "output_path = \"/content\"\n",
@@ -105,7 +105,7 @@
         "# Download the YouTube video\n",
         "youtube = YouTube(video_url)\n",
         "video = youtube.streams.get_highest_resolution()\n",
-        "video.download(output_path=output_path, filename=\"audio\")\n",
+        "video.download(output_path=output_path, filename=\"audio.wav\")\n",
         "\n",
         "# Rename the downloaded video to \"audio.mp3\"\n",
         "# os.rename(os.path.join(output_path, \"audio.mp4\"), os.path.join(output_path, \"audio.mp3\"))"
@@ -116,29 +116,29 @@
           "height": 35
         },
         "id": "4ZrgHx9p_kDs",
-        "outputId": "2e946506-a4f0-4bab-cdb9-14b3563510fe"
+        "outputId": "a4dcc8c6-8a78-4c5f-a0f1-83d92ea368b2"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'/content/audio'"
+              "'/content/audio.wav'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 16
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "model = whisper.load_model(\"base\")\n",
+        "model = whisper.load_model(\"large-v2\")\n",
         "result = model.transcribe(\"audio.wav\")\n",
         "print(result[\"text\"])"
       ],
@@ -147,15 +147,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LhfwUJhx_nPY",
-        "outputId": "e0180f48-278d-41f8-cf6f-cf9f43ded626"
+        "outputId": "ac9f113a-56b0-4c02-f6b9-16e0fd31cd16"
       },
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|███████████████████████████████████████| 139M/139M [00:05<00:00, 27.5MiB/s]\n",
             "/usr/local/lib/python3.10/dist-packages/whisper/transcribe.py:114: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
             "  warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n"
           ]
@@ -164,7 +163,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " I'ma set the tone for the first date. I'ma let Nickas know how I'm coming. I'm coming dressed in press watch first date Everybody gonna know. Oh, that's the pretty boy. That's the pretty guy. They gonna know. Oh, he dresser He dressed in press and I'ma be the only mother in there. I'ma play it American Eagle jeans white Real plane James, but the second day was gonna be even louder I'm gonna tell you what I'm wearing just wait This the little joint that's telling you about remember I said I had the new strap Yeah, remember I said I had a beam a laser beam built in it Remember I said I had a flashlight and remember I said I had the revisions scope on it Yeah, well, this is it plus I just put the 50 round drum on there So you already know what's up with it. You already know I got the switch in the back too, so that's nothing But I did just get the tattoo Just got it So that's fly nigga one on one everybody else they won't do crazy on the first day I'm gonna go crazy on the second watch. It was crazy. Yeah Most niggas they just tend to like switch up between like eight different shirts Nine different pairs of pants. Well me nigga. I got 13 pairs of both. I got 13 pairs of pants So I was gonna look like I got a new fit on every day, bro And then just imagine what I'm gonna get next month and then after that and then when the new year start my mom get in contacts Go to class go right to a few people checking you know me Do all that or the boys come come on we got hot the strap come on Yeah, we're gonna go hit we're gonna go to class Well, I'm gonna pick my son up first. Say what's up to him? Then we go to class\n"
+            " The Thinking Machine Hello again. With me tonight is Professor Jerome B. Wiesner, Director of the Research Laboratory of Electronics at MIT. Dr. Wiesner, what really worries me today is what's going to happen to us if machines can think. And what interests me specifically is, can they? Well, that's a very hard question to answer. If you'd asked me that question just a few years ago, I'd have said it was very far-fetched. Today I just have to admit I don't really know. I suspect if you come back in four or five years, I'll say, sure, they really do think. Well, if you're confused, Doctor, how do you think I feel? We're just really beginning to understand the capabilities of the computers. I've got some film to illustrate this point, which I think will amaze you. That man isn't playing checkers against the computer, is he? Sure, and it plays pretty well. While most computer scientists saw it as a mere number cruncher, a small group thought that the digital computer had a much grander destiny. Being a general-purpose machine, it could be programmed to do things which in humans require intelligence, play games like checkers and chess, and solve brain teasers. Let's see what it's printing out. The field became known as artificial intelligence. Can machines really think? Even the scientists argue that one. I'm convinced that machines can and will think. I don't mean that machines will behave like men. I don't think for a very long time we're going to have a difficult problem distinguishing a man from a robot. And I don't think my daughter will ever marry a computer. But I think the computers will be doing the things that men do when we say they're thinking. I'm convinced that machines can and will think in our lifetime. I confidently expect that within a matter of 10 or 15 years, something will emerge from the laboratories, which is not too far from the robot of science fiction fame. They hadn't reckoned with ambiguity when they set out to use computers to translate languages. A $500,000 super calculator, most versatile electronic brain known, translates Russian into English. Instead of mathematical wizardry, a sentence in Russian is to be fed into... One of the first non-numerical applications of computers, it was hyped as the solution to the Cold War obsession of keeping tabs on what the Russians were doing. Claims were made that the computer would replace most human translators. At present, of course, you're just in the experimental stage. When you go in for full-scale production, what will the capacity be? We should be able to do about, with a modern commercial computer, about one to two million words an hour. And this will be quite an adequate speed to cope with the whole output of the Soviet Union in just a few hours computer time a week. When do you hope to be able to achieve this speed? If our experiments go well, then perhaps within five years or so. And finally, Mr. McDaniel, does this mean the end of human translators? I'd say yes for translators of scientific and technical material, but as regards poetry and novels, no, I don't think we'll ever replace the translators of that type of material. Mr. McDaniel, thank you very much.\n"
           ]
         }
       ]
